--- a/KST.Madiff.CardService.Test/KST.Madiff.CardService.Test.csproj
+++ b/KST.Madiff.CardService.Test/KST.Madiff.CardService.Test.csproj
@@ -24,4 +24,10 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestData\AllowedCardActionsPolicyTestData.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
